@startuml

title __CONFIG's Class Diagram__\n

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.SecurityConfig {
        + configure()
        # configure()
        # configure()
    }
  }
  

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.ServletInitializer {
        + onStartup()
        # createRootApplicationContext()
        # createServletApplicationContext()
        # getServletMappings()
        - registerProxyFilter()
    }
  }
  

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.WebMvcConfig {
        + addResourceHandlers()
        + configureDefaultServletHandling()
        + configureMessageConverters()
        + contentViewResolver()
        + conversionService()
        + facebookController()
        + oAuth2ExceptionAdvice()
        {static} + propertySourcesPlaceholderConfigurer()
        + sparklrController()
        + sparklrRedirectController()
        + sparklrRedirectService()
        + sparklrService()
        + viewResolver()
    }
  }
  

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.WebMvcConfig.ResourceConfiguration {
        - accessTokenUri : String
        - userAuthorizationUri : String
        + facebook()
        + facebookRestTemplate()
        + sparklr()
        + sparklrRedirect()
        + sparklrRedirectRestTemplate()
        + sparklrRestTemplate()
        + trusted()
        + trustedClientRestTemplate()
    }
  }
  

  org.springframework.security.oauth.examples.config.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  org.springframework.security.oauth.examples.config.ServletInitializer -up-|> org.springframework.web.servlet.support.AbstractDispatcherServletInitializer
  org.springframework.security.oauth.examples.config.WebMvcConfig -up-|> org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter
  org.springframework.security.oauth.examples.config.WebMvcConfig +-down- org.springframework.security.oauth.examples.config.WebMvcConfig.ResourceConfiguration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
